--- a/index.html
+++ b/index.html
@@ -6,17 +6,29 @@
 <html class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>WiU Template</title>
+    <title>World Surf</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu:500' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
-<div id="wrapper">
   <header>
-     <h1>Project Name: WorldSurf</h1>
+  	<div id="top">
+  		<h1>WORLD SURF</h1>
+  		<a href="#">Sign In</a>
+  		<form name="searchForm" id="searchForm">
+			<input type="submit" id="ssubmit" value="Go" />
+			<input type="text" name="search" id="search" placeholder="Search" />
+		</form>
+  	</div>
   </header>
+  <div class="feature">
+  	<div class="slogan">
+  		<h1>WORLD SURF</h1>
+  		<p>text will go here</p>
+  	</div>
+  </div>
   <section class="main">
     <h2 class="desc-title">Project Description</h2>
     <!-- Replace this text with your description of the project -->
@@ -24,7 +36,7 @@
     <figure>
     <!--   add your image to the img folder 
       Replace the "img.jpg" with the name of your image  -->
-      <img src="img/img.jpg" alt="your picture description goes here"  />
+      <img src="images/img.jpg" alt="your picture description goes here"  />
       <figcaption>Type caption of your image here</figcaption>    
     </figure>
   </section>
@@ -69,7 +81,6 @@
     </table>
   </section>
   
-  <footer> &copy; 2013 your name goes here</footer>
-  </div> <!-- #wrapper div ends here-->
+  <footer> &copy; 2016 Roberto Mancillas</footer>
 </body>
 </html>
