--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
        </thead>
        <tbody>
           <tr class="odd">
-             <td><a href="#">Link to test 1 here</a></td>
-             <td><a href="">Link to test results 1</a></td>
+             <td><a href="https://usabilityhub.com/do/9c36accf4d85/8fc5">Link to test 1 here</a></td>
+             <td><a href="https://usabilityhub.com/tests/9c36accf4d85/results/c3153ff20fd8">Link to test results 1</a></td>
           </tr>
           <tr>
              <td><a href="#">Link to test 2 here</a></td>
