--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
   <div class="feature">
   	<div class="slogan">
   		<h1>WORLD SURF</h1>
-  		<p>text will go here</p>
+  		<p>Learn More</p>
   	</div>
   </div>
   <section class="main">
-    <h2 class="desc-title">Project Description</h2>
+    <h2 class="desc-title">About Us</h2>
     <!-- Replace this text with your description of the project -->
     <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi enim nibh, tempus rhoncus aliquam id, hendrerit non enim. Vestibulum eu tellus massa, vel interdum diam. Maecenas risus neque, dapibus vitae bibendum at, auctor sed neque. Vivamus dui felis, dignissim ut malesuada eu, consequat sed odio. Sed suscipit, magna et malesuada dignissim, libero nunc rhoncus purus, posuere vulputate nisl justo nec elit. Praesent adipiscing odio nec enim consectetur semper. Vivamus sollicitudin dapibus lacus a consectetur. Suspendisse quis massa vitae turpis tincidunt ultricies. Donec augue elit, mollis non malesuada a, pulvinar tincidunt orci. Vivamus scelerisque dapibus tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus turpis nisl, adipiscing in pellentesque sed, bibendum sed arcu. Vestibulum tincidunt mattis est nec dapibus. Nam faucibus, libero nec accumsan convallis, massa orci sollicitudin eros, vel vehicula enim est a orci.</p>
     <figure>
