--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="feature">
   	<div class="slogan">
   		<h1>WORLD SURF</h1>
-  		<p>Learn More</p>
+  		<a href="#">Learn More</a>
   	</div>
   </div>
   <section class="main">
