--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   </header>
   <div class="feature">
   	<div class="slogan">
-  		<h1>WORLD SURF</h1>
+  		<img src="images/logo.png" alt="your picture description goes here"  />
+  		<h1>Become a World Surf Nomad</h1>
   		<a href="#">Learn More</a>
   	</div>
   </div>
