--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
   	</div>
   </div>
   <section class="main">
-    <h2 class="desc-title">About Us</h2>
-    <!-- Replace this text with your description of the project -->
-    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi enim nibh, tempus rhoncus aliquam id, hendrerit non enim. Vestibulum eu tellus massa, vel interdum diam. Maecenas risus neque, dapibus vitae bibendum at, auctor sed neque. Vivamus dui felis, dignissim ut malesuada eu, consequat sed odio. Sed suscipit, magna et malesuada dignissim, libero nunc rhoncus purus, posuere vulputate nisl justo nec elit. Praesent adipiscing odio nec enim consectetur semper. Vivamus sollicitudin dapibus lacus a consectetur. Suspendisse quis massa vitae turpis tincidunt ultricies. Donec augue elit, mollis non malesuada a, pulvinar tincidunt orci. Vivamus scelerisque dapibus tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus turpis nisl, adipiscing in pellentesque sed, bibendum sed arcu. Vestibulum tincidunt mattis est nec dapibus. Nam faucibus, libero nec accumsan convallis, massa orci sollicitudin eros, vel vehicula enim est a orci.</p>
+  		 <h2 class="desc-title">About Us</h2>
+		<!-- Replace this text with your description of the project -->
+		<p class="description"> Sign up today to become a World Surf Nomad and search hundreds of surf destinations across the world. You will be able to bookmark and save your favorite destinations, view live webcams, and also learn tips and tricks from past surfers. All of the destination details will be a click away for you to view at any time. </p>
     <figure>
     <!--   add your image to the img folder 
       Replace the "img.jpg" with the name of your image  -->
-      <img src="images/img.jpg" alt="your picture description goes here"  />
-      <figcaption>Type caption of your image here</figcaption>    
+      <img src="images/phone2.png" alt="your picture description goes here"  />
+      <figcaption>All rights to this image are reserved to <a href="http://surfreport.billabong.com/">Billabong</a></figcaption>    
     </figure>
   </section>
   <section class="sec">
