--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
              <td><a href="https://usabilityhub.com/tests/9c36accf4d85/results/c3153ff20fd8">Results</a></td>
           </tr>
           <tr>
-             <td><a href="#">Link to test 2 here</a></td>
-             <td><a href="">Link to test results 2</a></td>
+             <td><a href="https://usabilityhub.com/do/6407400259bd/edfc">B3: Usable Details Design</a></td>
+             <td><a href="https://usabilityhub.com/tests/6407400259bd/results/e9df6559cc53">Results</a></td>
           </tr>
           <tr class="odd">
              <td><a href="#">Link to test 3 here</a></td>
