--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
              <td><a href="https://usabilityhub.com/tests/6407400259bd/results/e9df6559cc53">Results</a></td>
           </tr>
           <tr class="odd">
-             <td><a href="#">Link to test 3 here</a></td>
-             <td><a href="">Link to test results 3</a></td>
+             <td><a href="https://usabilityhub.com/do/8751da65151c/560e">B4: Usable Homepage & Categories</a></td>
+             <td><a href="https://usabilityhub.com/tests/8751da65151c/results/648a994b80ad">Results</a></td>
           </tr>
           <tr>
              <td><a href="#">Link to test 4 here</a></td>
